[gd_scene load_steps=8 format=3 uid="uid://t2toqhl22hyj"]

[ext_resource type="Script" uid="uid://db1pxdma8y6ac" path="res://Hallasan-Sunset/Technical/Enemy_spawn/enemy_spawn.gd" id="1_w0wip"]
[ext_resource type="Texture2D" uid="uid://cauy7uowftney" path="res://Hallasan-Sunset/Environment/Weather/Lightning/Sprites/weather effects, lightning full 32x128.png" id="2_8wys0"]
[ext_resource type="AudioStream" uid="uid://pm1tygg2w8au" path="res://Hallasan-Sunset/Environment/Weather/Lightning/Audio/thunderstorm-ambiance-191991.mp3" id="3_8wys0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0jrac"]
radius = 70.0643

[sub_resource type="Animation" id="Animation_w0wip"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7bfoo"]
resource_name = "strike"
length = 6.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_8wys0")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8lp61"]
_data = {
&"RESET": SubResource("Animation_w0wip"),
&"strike": SubResource("Animation_7bfoo")
}

[node name="EnemySpawner" type="Area2D"]
script = ExtResource("1_w0wip")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0jrac")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
z_index = 1
y_sort_enabled = true
texture_filter = 1
position = Vector2(0, -60)
texture = ExtResource("2_8wys0")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8lp61")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
